--- a/src/popover/photo-popover/photo-popover.component.html
+++ b/src/popover/photo-popover/photo-popover.component.html
@@ -10,10 +10,10 @@
 </ion-header>
 <ion-content>
   <div *ngIf="data?.attachments && data.attachments.length > 0">
-    <ion-slides #photoSlides pager="true">
-      <ion-slide *ngFor="let attachment of data.attachments;let i = index">
+    <swiper-container #photoSlides pager="true">
+      <swiper-slide *ngFor="let attachment of data.attachments;let i = index">
           <async-image class="brew-image" filePath="{{attachment}}"></async-image>
-      </ion-slide>
-    </ion-slides>
+      </swiper-slide>
+    </swiper-container>
   </div>
 </ion-content>
