--- a/src/popover/photo-popover/photo-popover.component.html
+++ b/src/popover/photo-popover/photo-popover.component.html
@@ -10,7 +10,7 @@
 </ion-header>
 <ion-content>
   <div *ngIf="data?.attachments && data.attachments.length > 0">
-    <swiper-container #photoSlides pager="true">
+    <swiper-container  [pagination]="{ clickable: true }"   #photoSlides pager="true">
       <swiper-slide *ngFor="let attachment of data.attachments;let i = index">
           <async-image class="brew-image" filePath="{{attachment}}"></async-image>
       </swiper-slide>
