--- a/src/components/brews/brew-brewing/brew-brewing.component.html
+++ b/src/components/brews/brew-brewing/brew-brewing.component.html
@@ -575,7 +575,7 @@
     <ion-button (click)="calculateBrixToTds()" class="big-icon-only" fill="clear" slot="end" tappable>
       <ion-icon class="ion-color-accent" name="beanconqueror-refractometer" slot="icon-only"></ion-icon>
     </ion-button>
-    <ion-button *ngIf="refractometerConnected() || !this.platform.is('cordova')" style="margin-left:0px;" (click)="requestRefractometerRead()" class="big-icon-only" fill="clear" slot="end" tappable>
+    <ion-button *ngIf="refractometerConnected()" style="margin-left:0px;" (click)="requestRefractometerRead()" class="big-icon-only" fill="clear" slot="end" tappable>
       <ion-icon class="ion-color-accent" name="beanconqueror-microscope" slot="icon-only"></ion-icon>
     </ion-button>
   </ion-item>
